<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="loginViewModel" type="com.improcorp.myapplication.viewmodel.LoginViewModel"/>
    </data>

    <LinearLayout
        android:id="@+id/login_fragment_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@color/main2"
        tools:context=".LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/secondary1_v2"
            android:layout_marginBottom="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_pseudo_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/main1_v2"
            app:hintTextColor="@color/main1_v2"
            app:boxStrokeErrorColor="@color/indian_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/secondary1_v2"
            app:shapeAppearance="@style/Cut"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/activity_main_pseudo_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text"
                android:textColor="@color/secondary2_v2"
                android:textCursorDrawable="@drawable/cursor"
                android:text="@={loginViewModel.inputPseudo}"
                android:imeOptions="actionNext"
                android:layout_marginBottom="10dp"
                android:hint="@string/fragment_login_pseudo_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_main_password_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/main1_v2"
            app:hintTextColor="@color/main1_v2"
            app:boxStrokeErrorColor="@color/indian_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/secondary1_v2"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/main1_v2"
            app:errorText="@{loginViewModel.isErrorLogin()?@string/login_error:null}"
            app:shapeAppearance="@style/Cut"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/activity_main_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/secondary2_v2"
                android:textCursorDrawable="@drawable/cursor"
                android:text="@={loginViewModel.inputPassword}"
                android:imeOptions="actionGo"
                android:layout_marginBottom="10dp"
                android:hint="@string/fragment_login_password_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary2_v2"
            android:text="@string/fragment_login_remember_me_txt"
            android:checked="@={loginViewModel.inputRememberMe}"
            android:theme="@style/MainCheckBox"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_main_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button.TextAppearance"
            android:theme="@style/AppTheme.Button"
            android:layout_marginBottom="10dp"
            android:text="@string/fragment_login_connexion_button"
            android:onClick="@{() -> loginViewModel.onLoginClicked()}"
            android:imeOptions="actionDone"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

        </com.google.android.material.button.MaterialButton>

        <TextView
            android:id="@+id/activity_main_register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main1_v2"
            android:text="@string/fragment_login_registration_txt"
            android:layout_gravity="center_horizontal"
            android:onClick="@{() -> loginViewModel.onRegisterClicked()}"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

        </TextView>

    </LinearLayout>


</layout>