<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="registrationViewModel" type="com.improcorp.myapplication.viewmodel.RegistrationViewModel"/>
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@color/main2"
        tools:context=".RegistrationActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/secondary1_v2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/app_name"></TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_registration_last_name_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/main1_v2"
                    app:hintTextColor="@color/main1_v2"
                    app:boxStrokeErrorColor="@color/indian_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/secondary1_v2"
                    app:shapeAppearance="@style/Cut"
                    app:errorText="@{registrationViewModel.isErrorLastName()?@string/fragment_register_last_name_error:null}"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <EditText
                        android:id="@+id/activity_registration_last_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@color/secondary2_v2"
                        android:textCursorDrawable="@drawable/cursor"
                        android:text="@={registrationViewModel.inputLastName}"
                        android:imeOptions="actionNext"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/fragment_register_last_name_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_registration_first_name_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/main1_v2"
                    app:hintTextColor="@color/main1_v2"
                    app:boxStrokeErrorColor="@color/indian_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/secondary1_v2"
                    app:shapeAppearance="@style/Cut"
                    app:errorText="@{registrationViewModel.isErrorFirstName()?@string/fragment_register_first_name_error:null}"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <EditText
                        android:id="@+id/activity_registration_first_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@color/secondary2_v2"
                        android:textCursorDrawable="@drawable/cursor"
                        android:text="@={registrationViewModel.inputFirstName}"
                        android:imeOptions="actionNext"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/fragment_register_first_name_hint"></EditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_registration_email_address_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/main1_v2"
                    app:hintTextColor="@color/main1_v2"
                    app:boxStrokeErrorColor="@color/indian_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/secondary1_v2"
                    app:shapeAppearance="@style/Cut"
                    app:errorText="@{registrationViewModel.isErrorEmailAddress()?@string/fragment_register_email_address_error:null}"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <EditText
                        android:id="@+id/activity_registration_email_address_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@color/secondary2_v2"
                        android:textCursorDrawable="@drawable/cursor"
                        android:text="@={registrationViewModel.inputEmailAddress}"
                        android:imeOptions="actionNext"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/fragment_register_email_address_hint"></EditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_registration_pseudo_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/main1_v2"
                    app:hintTextColor="@color/main1_v2"
                    app:boxStrokeErrorColor="@color/indian_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/secondary1_v2"
                    app:shapeAppearance="@style/Cut"
                    app:errorText="@{registrationViewModel.isErrorPseudo()?@string/fragment_register_pseudo_error:null}"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <EditText
                        android:id="@+id/activity_registration_pseudo_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="text"
                        android:textColor="@color/secondary2_v2"
                        android:textCursorDrawable="@drawable/cursor"
                        android:text="@={registrationViewModel.inputPseudo}"
                        android:imeOptions="actionNext"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/fragment_register_pseudo_address_hint"></EditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_registration_password1_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/main1_v2"
                    app:hintTextColor="@color/main1_v2"
                    app:boxStrokeErrorColor="@color/indian_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/secondary1_v2"
                    app:shapeAppearance="@style/Cut"
                    app:errorText="@{registrationViewModel.isErrorPassword1()?@string/fragment_register_password1_error:null}"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <EditText
                        android:id="@+id/activity_registration_password1_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColor="@color/secondary2_v2"
                        android:textCursorDrawable="@drawable/cursor"
                        android:text="@={registrationViewModel.inputPassword1}"
                        android:imeOptions="actionNext"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/fragment_register_password1_hint"></EditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_registration_password2_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:boxStrokeColor="@color/main1_v2"
                    app:hintTextColor="@color/main1_v2"
                    app:boxStrokeErrorColor="@color/indian_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/secondary1_v2"
                    app:shapeAppearance="@style/Cut"
                    app:errorText="@{registrationViewModel.isErrorPassword2()?@string/fragment_register_password2_error:null}"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <EditText
                        android:id="@+id/activity_registration_password2_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColor="@color/secondary2_v2"
                        android:textCursorDrawable="@drawable/cursor"
                        android:text="@={registrationViewModel.inputPassword2}"
                        android:imeOptions="actionDone"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/fragment_register_password2_hint"></EditText>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/activity_main_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/main1_v2"
                    android:textColor="@color/main2_v2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:text="@string/fragment_register_register_button"
                    android:onClick="@{() -> registrationViewModel.onRegisterClicked()}"
                    android:imeOptions="actionDone"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                </Button>

                <TextView
                    android:id="@+id/activity_main_register_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main1_v2"
                    android:text="@string/fragment_register_login_txt"
                    android:layout_gravity="center_horizontal"
                    android:onClick="@{() -> registrationViewModel.onLoginClicked()}"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                </TextView>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>